--- a/nodejs.manifest.template
+++ b/nodejs.manifest.template
@@ -5,7 +5,7 @@
 loader.entrypoint = "file:{{ gramine.libos }}"
 libos.entrypoint = "{{ nodejs_dir }}/nodejs"
 
-fs.start_dir = "."
+#fs.start_dir = "."
 
 loader.log_level = "{{ log_level }}"
 
