--- a/nodejs.manifest.template
+++ b/nodejs.manifest.template
@@ -49,7 +49,7 @@ sgx.trusted_files = [
   "file:{{ arch_libdir }}/",
   "file:/usr/{{ arch_libdir }}/",
   "file:{{ nodejs_dir }}/nodejs",
-  "file:hello_world.js",
+  "file:hello_world.js"
 ]
 
 # Insecure configuration. Use gramine encrypted fs to store data in production.
