--- a/nodejs.manifest.template
+++ b/nodejs.manifest.template
@@ -53,7 +53,7 @@ sgx.trusted_files = [
 ]
 
 # Insecure configuration. Use gramine encrypted fs to store data in production.
-# sgx.allowed_files = [
-# ]
+sgx.allowed_files = [
+]
 
 loader.env.SGX = "1"
